Api-ified the builders more and added some handy interfaces and classes for creative tabs so that the builders for creative tab filling are no longer hardcoded